<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/weekend_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="107dp"
        android:text="@string/weekend_main_text_placeholder"
        android:textColor="@color/black87"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/weekend_bottom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/weekend_main_text"
        android:layout_below="@+id/weekend_main_text"
        android:layout_marginStart="5dp"
        android:text="@string/weekend_bottom_text_placeholder"
        android:textColor="@color/black54"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/weekend_on_duties_introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/weekend_main_text"
        android:layout_below="@+id/weekend_bottom_text"
        android:layout_marginTop="136dp"
        android:text="@string/weekend_on_duties_introduction"
        android:textColor="@color/black87"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/weekend_on_duty_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/weekend_on_duties_introduction"
        android:layout_below="@+id/weekend_on_duties_introduction"
        android:text="@string/first_on_duty_placeholder"
        android:textColor="@color/black54"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/weekend_on_duty_second_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/weekend_on_duties_introduction"
        android:layout_below="@+id/weekend_on_duty_first_name"
        android:text="@string/second_on_duty_placeholder"
        android:textColor="@color/black54"
        android:textSize="30sp" />

</RelativeLayout>