<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/on_duties_introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="96dp"
        android:text="@string/on_duties_introduction_placeholder"
        android:textColor="@color/black54"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/onduty_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/on_duties_introduction"
        android:layout_below="@+id/on_duties_introduction"
        android:text="@string/first_on_duty_placeholder"
        android:textColor="@color/black87"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/on_duty_second_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/on_duties_introduction"
        android:layout_below="@+id/onduty_first_name"
        android:text="@string/second_on_duty_placeholder"
        android:textColor="@color/black87"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/current_school_week_introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/on_duty_second_name"
        android:layout_marginBottom="131dp"
        android:text="@string/current_school_week_introduction"
        android:textColor="@color/black54"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/current_school_week_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/current_school_week_introduction"
        android:layout_alignBottom="@+id/current_school_week_introduction"
        android:layout_toEndOf="@+id/current_school_week_introduction"
        android:paddingLeft="10dp"
        android:text="4"
        android:textColor="@color/black87"
        android:textSize="56sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/current_school_week_introduction"
        android:layout_below="@+id/current_school_week_number"
        android:text="@string/working_day_bottom_text_placeholder"
        android:textColor="@color/black54"
        android:textSize="16sp"/>

</RelativeLayout>